
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 FEB 18a
   * in bin
     - deleted reentry2.wrp
     - deleted reentry3.wrp
     - added reentry_sheath.wrp


2019 FEB 17a
   * in model/metrics/doc/report.tex
     - added section related to new metrics that ensure freestream preservation in 3D


2019 FEB 16a
   * in bin
     - renamed standard test cases to standard names


2019 FEB 14b
   * in bin
     - modified taylor_green_vortex.wrp to latest version
     - renamed taylor_green_vortex.mcr to taylor_green_vortex_2.mcr 
     - renamed taylor_green_vortex.eqn to taylor_green_vortex_2.eqn 
     - added taylor_green_vortex.mcr which is to be used with taylor_green_vortex.wrp
     - added taylor_green_vortex.eqn which is to be used with taylor_green_vortex.wrp


2019 FEB 14a
   * in model/share/fluid_share.c
     - added condition_Lambda_plus_minus_Parent3()


2019 FEB 12a
   * in model/share/fluid_share.c
     - added condition_Lambda_plus_minus_Parent2()


2019 FEB 11a
   * in cycle/resconv/_MUSCL+/resconv.hh and cycle/resconv/_MUSCL/resconv.hh
     - changed PARENT [parent2018a] to PASCAL [parent2018a]
   * in cycle/resconv/_MUSCL/resconv.c
     - added EIGENVALCOND_PARENT
   * in cycle/share/res_share.h
     - added EIGENVALCOND_PARENT
   * in model/share/fluid_share.c
     - renamed condition_Lambda_plus_minus_Parent() to condition_Lambda_plus_minus_Pascal() 
     - added new condition_Lambda_plus_minus_Parent()


2019 FEB 10a
   * renamed
     - EIGENVALCOND_PARENT -> EIGENVALCOND_PASCAL


2019 FEB 08c
   * in bin 
     - added Pstag.eqn
     - improved cylinder_in_freestream.wrp


2019 FEB 08b
   * in bin
     - modified eigenvalue conditioning parameters in carbuncle.wrp, forward_step.wrp, impinge.wrp


2019 FEB 08a
   * in model/thermo/_generic/thermo.c