@@ -174,6 +174,9 @@ Disc(
     AOWENO_gammahi=0.85;
     INTERPOL=INTERPOL_AOWENO5;
     EIGENVALCOND=EIGENVALCOND_GNOFFO;
+    POSFILTER=POSFILTER_NONE;
+    POSFILTER_numiter=4;
+    FACEINTEG=FACEINTEG_CENTRAL1;
   );
 
 );
